--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,8 @@
 
-.App-logo {
-  height: 15vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 5s linear 0s alternate-reverse;
-  }
-}
-
 .App {
-  background-color: #282c34;
+  background-color: #083F51;
   min-height: 100vh;
+  color: #E0E0E0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
   font-family: Helvetica,Arial,sans-serif;
-}
-
-.App-link {
-  font-size: 15px;
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(90deg);
-  }
 }
